Add introduction to KAN experiment

--- a/KAN_MNIST.ipynb
+++ b/KAN_MNIST.ipynb
@@ -11,6 +11,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In [our paper](https://arxiv.org/abs/2404.08624), $\\delta$-Gradient Clipping ($\\delta$-GClip) was introduced as the only known way to optimize neural networks using adaptive gradients with provable convergence guarantees on deep neural networks. This file gives a demonstration of $\\delta$-GClip being a competitive trainer of Kolmogorov-Arnold Networks (KANs) too, which were recently introduced in [Liu et al.](https://arxiv.org/abs/2404.19756)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "DNpuuEwuQW-V"
       },
